Closed
Bug 420008
Opened 15 years ago
Closed 14 years ago
"ASSERTION: Null content being pushed" with range.createContextualFragment
Categories
(Core :: DOM: HTML Parser, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jruderman, Assigned: mrbkap)
Details
(Keywords: assertion, testcase)
Attachments
(2 files)
180 bytes,
application/xhtml+xml
|
Details | |
735 bytes,
patch
|
bzbarsky
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
###!!! ASSERTION: Null content being pushed!: 'aContent', file /Users/jruderman/trunk/mozilla/content/xml/document/src/nsXMLContentSink.cpp, line 891
![]() |
||
Comment 1•14 years ago
|
||
This seems like a parser bug in nsParser::ParseFragment. In this case the context is empty, so we're never calling WillBuildModel before we call WillBuildContent. Hence the assertion.
Component: DOM: Traversal-Range → HTML: Parser
QA Contact: traversal-range → parser
Assignee | ||
Comment 2•14 years ago
|
||
This is pretty hacky, I admit, but I think it's the easiest way to ensure that we call WillBuildModel.
![]() |
||
Comment 3•14 years ago
|
||
Comment on attachment 329483 [details] [diff] [review] Possible fix Yeah, I guess this works.
Attachment #329483 -
Flags: superreview+
Attachment #329483 -
Flags: review?(bzbarsky)
Attachment #329483 -
Flags: review+
Assignee | ||
Comment 4•14 years ago
|
||
Pushed as http://hg.mozilla.org/index.cgi/mozilla-central/rev/2a44521bb5f7
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•