Ensure that we call WillBuildModel. bug 420008, r+sr=bzbarsky